# rag-agent

./: .gitignore  INTEGRATION.md  README.md
backend/: .gitignore  Dockerfile  Makefile  README.md  ROUTER_IMPLEMENTATION.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py
backend/app/agents/: __init__.py  answer_generator.py  context_compressor.py  quality_reflector.py  query_expander.py
backend/app/api/: __init__.py  middleware.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: __init__.py  auth.py  chats.py  documents.py  messages.py  metrics.py  queries.py
backend/app/core/: exceptions.py  langsmith.py  logging.py  security.py
backend/app/database/: __init__.py  session.py
backend/app/dependencies/: auth.py
backend/app/graph/: __init__.py  rag_graph.py  router_graph.py  router_state.py  state.py
backend/app/models/: __init__.py  database.py  schemas.py
backend/app/optimization/: __init__.py  caching.py  cost_tracker.py
backend/app/search/: __init__.py  hybrid_search.py  reranker.py  web_search.py
backend/app/utils/: document_loader.py  metrics.py
frontend/: .env.example  README.md  index.html  package-lock.json  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: Avatar.tsx  ChatInput.tsx  ChatInterface.tsx  ChatMessage.tsx  ChatSidebar.tsx  DocumentCard.tsx  Sidebar.tsx  TypingIndicator.tsx  UploadArea.tsx  WelcomeScreen.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useRAG.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Chat.tsx  (+3 more)
(+1 files in other folders)
